manifests/base/repo-server/hanzocd-repo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-repo-server
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: repo-server
  name: hanzocd-repo-server
spec:
  ports:
  - name: server
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: metrics
    protocol: TCP
    port: 8084
    targetPort: 8084
  selector:
    app.kubernetes.io/name: hanzocd-repo-server
